Add conference alias to all api methods
