# app/Http/Controllers/Api/SettingsController.php
@@ -12,12 +12,19 @@ class SettingsController extends ApiController
      * Get list of Settings
      *
      * @SWG\Get(
-     *     path="/getSettings",
+     *     path="/{conference_alias}/getSettings",
      *     summary="Get settings",
      *     tags={"Settings"},
      *     description="Returns settings",
      *     operationId="index",
      *     produces={"application/json"},
+     *     @SWG\Parameter(
+     *         description="Conference alias",
+     *         in="path",
+     *         name="conference_alias",
+     *         required=true,
+     *         type="string"
+     *     ),
      *     @SWG\Response(
      *         response=200,
      *         description="Successful operation",
