# public/api/docs/swagger.json
@@ -6,7 +6,7 @@
     },
     "basePath": "/api/v2/euna-mcdermott-dds",
     "paths": {
-        "/getLevels": {
+        "/{conference_alias}/getLevels": {
             "get": {
                 "tags": [
                     "Event"
@@ -18,6 +18,13 @@
                     "application/json"
                 ],
                 "parameters": [
+                    {
+                        "name": "conference_alias",
+                        "in": "path",
+                        "description": "Conference alias",
+                        "required": true,
+                        "type": "string"
+                    },
                     {
                         "name": "If-Modified-Since",
                         "in": "header",
@@ -48,7 +55,7 @@
                 }
             }
         },
-        "/getTracks": {
+        "/{conference_alias}/getTracks": {
             "get": {
                 "tags": [
                     "Event"
@@ -60,6 +67,13 @@
                     "application/json"
                 ],
                 "parameters": [
+                    {
+                        "name": "conference_alias",
+                        "in": "path",
+                        "description": "Conference alias",
+                        "required": true,
+                        "type": "string"
+                    },
                     {
                         "name": "If-Modified-Since",
                         "in": "header",
@@ -90,7 +104,7 @@
                 }
             }
         },
-        "/getTypes": {
+        "/{conference_alias}/getTypes": {
             "get": {
                 "tags": [
                     "Event"
@@ -102,6 +116,13 @@
                     "application/json"
                 ],
                 "parameters": [
+                    {
+                        "name": "conference_alias",
+                        "in": "path",
+                        "description": "Conference alias",
+                        "required": true,
+                        "type": "string"
+                    },
                     {
                         "name": "If-Modified-Since",
                         "in": "header",
@@ -132,7 +153,7 @@
                 }
             }
         },
-        "/getSessions": {
+        "/{conference_alias}/getSessions": {
             "get": {
                 "tags": [
                     "Event"
@@ -144,6 +165,13 @@
                     "application/json"
                 ],
                 "parameters": [
+                    {
+                        "name": "conference_alias",
+                        "in": "path",
+                        "description": "Conference alias",
+                        "required": true,
+                        "type": "string"
+                    },
                     {
                         "name": "If-Modified-Since",
                         "in": "header",
@@ -174,7 +202,7 @@
                 }
             }
         },
-        "/getBofs": {
+        "/{conference_alias}/getBofs": {
             "get": {
                 "tags": [
                     "Event"
@@ -186,6 +214,13 @@
                     "application/json"
                 ],
                 "parameters": [
+                    {
+                        "name": "conference_alias",
+                        "in": "path",
+                        "description": "Conference alias",
+                        "required": true,
+                        "type": "string"
+                    },
                     {
                         "name": "If-Modified-Since",
                         "in": "header",
@@ -216,7 +251,7 @@
                 }
             }
         },
-        "/getSocialEvents": {
+        "/{conference_alias}/getSocialEvents": {
             "get": {
                 "tags": [
                     "Event"
@@ -228,6 +263,13 @@
                     "application/json"
                 ],
                 "parameters": [
+                    {
+                        "name": "conference_alias",
+                        "in": "path",
+                        "description": "Conference alias",
+                        "required": true,
+                        "type": "string"
+                    },
                     {
                         "name": "If-Modified-Since",
                         "in": "header",
@@ -258,7 +300,7 @@
                 }
             }
         },
-        "/getFloorPlans": {
+        "/{conference_alias}/getFloorPlans": {
             "get": {
                 "tags": [
                     "Floor"
@@ -270,6 +312,13 @@
                     "application/json"
                 ],
                 "parameters": [
+                    {
+                        "name": "conference_alias",
+                        "in": "path",
+                        "description": "Conference alias",
+                        "required": true,
+                        "type": "string"
+                    },
                     {
                         "name": "If-Modified-Since",
                         "in": "header",
@@ -300,7 +349,7 @@
                 }
             }
         },
-        "/getLocations": {
+        "/{conference_alias}/getLocations": {
             "get": {
                 "tags": [
                     "Location"
@@ -312,6 +361,13 @@
                     "application/json"
                 ],
                 "parameters": [
+                    {
+                        "name": "conference_alias",
+                        "in": "path",
+                        "description": "Conference alias",
+                        "required": true,
+                        "type": "string"
+                    },
                     {
                         "name": "If-Modified-Since",
                         "in": "header",
@@ -342,7 +398,7 @@
                 }
             }
         },
-        "/getInfo": {
+        "/{conference_alias}/getInfo": {
             "get": {
                 "tags": [
                     "Info"
@@ -354,6 +410,13 @@
                     "application/json"
                 ],
                 "parameters": [
+                    {
+                        "name": "conference_alias",
+                        "in": "path",
+                        "description": "Conference alias",
+                        "required": true,
+                        "type": "string"
+                    },
                     {
                         "name": "If-Modified-Since",
                         "in": "header",
@@ -400,7 +463,7 @@
                 }
             }
         },
-        "/getPOI": {
+        "/{conference_alias}/getPOI": {
             "get": {
                 "tags": [
                     "Point"
@@ -412,6 +475,13 @@
                     "application/json"
                 ],
                 "parameters": [
+                    {
+                        "name": "conference_alias",
+                        "in": "path",
+                        "description": "Conference alias",
+                        "required": true,
+                        "type": "string"
+                    },
                     {
                         "name": "If-Modified-Since",
                         "in": "header",
@@ -442,7 +512,7 @@
                 }
             }
         },
-        "/getSchedules": {
+        "/{conference_alias}/getSchedules": {
             "get": {
                 "tags": [
                     "Schedule"
@@ -461,6 +531,13 @@
                         "required": false,
                         "type": "string",
                         "default": "Tue, 4 Apr 2017 09:50:24 +0000"
+                    },
+                    {
+                        "name": "conference_alias",
+                        "in": "path",
+                        "description": "Conference alias",
+                        "required": true,
+                        "type": "string"
                     },
                     {
                         "name": "codes[]",
@@ -495,7 +572,7 @@
                 }
             }
         },
-        "/getSchedule/{code}": {
+        "/{conference_alias}/getSchedule/{code}": {
             "get": {
                 "tags": [
                     "Schedule"
@@ -507,6 +584,13 @@
                     "application/json"
                 ],
                 "parameters": [
+                    {
+                        "name": "conference_alias",
+                        "in": "path",
+                        "description": "Conference alias",
+                        "required": true,
+                        "type": "string"
+                    },
                     {
                         "name": "code",
                         "in": "path",
@@ -529,7 +613,7 @@
                 }
             }
         },
-        "/createSchedule": {
+        "/{conference_alias}/createSchedule": {
             "post": {
                 "tags": [
                     "Schedule"
@@ -541,6 +625,13 @@
                     "application/json"
                 ],
                 "parameters": [
+                    {
+                        "name": "conference_alias",
+                        "in": "path",
+                        "description": "Conference alias",
+                        "required": true,
+                        "type": "string"
+                    },
                     {
                         "name": "body",
                         "in": "body",
@@ -578,7 +669,7 @@
                 }
             }
         },
-        "/updateSchedule/{code}": {
+        "/{conference_alias}/updateSchedule/{code}": {
             "put": {
                 "tags": [
                     "Schedule"
@@ -590,6 +681,13 @@
                     "application/json"
                 ],
                 "parameters": [
+                    {
+                        "name": "conference_alias",
+                        "in": "path",
+                        "description": "Conference alias",
+                        "required": true,
+                        "type": "string"
+                    },
                     {
                         "name": "code",
                         "in": "path",
@@ -638,7 +736,7 @@
                 }
             }
         },
-        "/getSettings": {
+        "/{conference_alias}/getSettings": {
             "get": {
                 "tags": [
                     "Settings"
@@ -648,6 +746,15 @@
                 "operationId": "index",
                 "produces": [
                     "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "conference_alias",
+                        "in": "path",
+                        "description": "Conference alias",
+                        "required": true,
+                        "type": "string"
+                    }
                 ],
                 "responses": {
                     "200": {
@@ -665,7 +772,7 @@
                 }
             }
         },
-        "/getSpeakers": {
+        "/{conference_alias}/getSpeakers": {
             "get": {
                 "tags": [
                     "Speaker"
@@ -677,6 +784,13 @@
                     "application/json"
                 ],
                 "parameters": [
+                    {
+                        "name": "conference_alias",
+                        "in": "path",
+                        "description": "Conference alias",
+                        "required": true,
+                        "type": "string"
+                    },
                     {
                         "name": "If-Modified-Since",
                         "in": "header",
@@ -707,7 +821,7 @@
                 }
             }
         },
-        "/checkUpdates": {
+        "/{conference_alias}/checkUpdates": {
             "get": {
                 "tags": [
                     "Updates"
@@ -719,6 +833,13 @@
                     "application/json"
                 ],
                 "parameters": [
+                    {
+                        "name": "conference_alias",
+                        "in": "path",
+                        "description": "Conference alias",
+                        "required": true,
+                        "type": "string"
+                    },
                     {
                         "name": "If-Modified-Since",
                         "in": "header",
